--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,15 @@
-# remap prefix from 'C-b' to 'C-a'
+# Remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# split panes using - and =
+# Split panes using - and =
 bind - split-window -h
 bind = split-window -v
 unbind '"'
 unbind %
 
-# switch panes using Alt-arrow without prefix
+# Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
@@ -17,3 +17,15 @@ bind -n M-Down select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+
+# https://unix.stackexchange.com/questions/318281/how-to-copy-and-paste-with-a-mouse-with-tmux
+setw -g mode-keys vi
+# Optionally update default binding of `Enter` to also use copy-pipe
+# unbind -T copy-mode-vi Enter
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard; tmux display-message 'copied!'"
+
+# Alternative way to copy:
+# Select text with a mouse & press C-a + y to copy to clipboard
+# bind y run-shell -b "tmux save-buffer - | xclip -sel clipboard"
+# bind-key C-v run-shell 'tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer'
