--- a/settings.json
+++ b/settings.json
@@ -26,19 +26,5 @@
     "vscode_custom_css.imports": [
         "file:///home/tomas/Desktop/dotfiles/purple.css"
     ],
-    "window.titleBarStyle": "custom",
-
-    "files.exclude": {
-        "**/.cache": true,
-        "**/.pytest_cache": true,
-        "**/*.egg-info": true,
-        "**/__pycache__": true,
-        "**/static/dist": true,
-        "**/docs/build": true
-    },
-
-    "search.exclude": {
-        "indico/indico/translations/": true,
-        "indico/indico/web/static/fonts/": true
-    }
+    "window.titleBarStyle": "custom"
 }
