--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,33 @@
+[user]
+        email = tomas.roun8@gmail.com
+        name = Tomas Roun
+[core]
+#       pager = delta
+        editor = code --wait
+[diff]
+        algorithm = histogram
+[merge]
+        conflictstyle = zdiff3
+[rerere]
+        enabled = true
+[url "git@github.com:"]
+		# For git clone gh:user/repo
+        insteadOf = "gh:"
+        pushInsteadOf = "https://github.com/"
 [alias]
-	a = add
-	b = "!git -P branch"
-	c = commit
-	s = status
-	r = rebase
-	ch = checkout
-	cb = checkout -b
-	puff = pull --ff-only
-	lg = log --color=always --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ad) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+        a = add
+        b = branch
+        c = commit
+        s = status
+        dh = diff HEAD
+        cb = checkout -b
+        # https://github.com/ThiefMaster/myd0t
+        # a compact one-line log view
+        lg = log --color=always --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ad) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+        # same, but with absolute dates
+        lga = log --color=always --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ad) %C(bold blue)<%an>%Creset' --abbrev-commit --date=iso
+        # when pulling from upstream, rebase is the way to go, so let's have an explicit alias for it
+        purr = pull --rebase
+        # when you know there's nothing local to rebase, be explicit about fast-forwarding
+        puff = pull --ff-only
+
