--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,9 @@ bind = split-window -v
 unbind '"'
 unbind %
 
+# Synchronize panes
+bind-key y set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+
 # Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
